<resources>
    <string name="app_name">NoBroker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="ph_no">Phone Number</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="tenant">Tenant</string>
    <string name="landlord">LandLord</string>
    <string name="choose_options">CHOOSE OPTIONS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate_price">Calculate Price</string>
    <string name="enquiries">Enquiries</string>
    <string name="list">list</string>
    <string name="number_of_room">Number Of Rooms</string>
    <string name="location">Location</string>
    <string name="calculate">Calculate</string>
    <string name="login">Login</string>
    <string name="key_points">KEY POINTS</string>
    <string name="price_negotiable">PRICE NEGOTIABLE:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="size_of_property">Size of Property</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="choose_suitable_options">CHOOSE SUITABLE OPTIONS</string>
    <string name="gym">Gym</string>
    <string name="lift">Lift</string>
    <string name="internet">Internet</string>
    <string name="ac">AC</string>
    <string name="club">Club</string>
    <string name="security">Security</string>
    <string name="intercom">Intercom</string>
    <string name="park">Park</string>
    <string name="pool">Pool</string>
    <string name="cpa">CPA</string>
    <string name="job">Job</string>
    <string name="id">ID</string>
    <string name="create">Created At</string>
    <string name="close">Close</string>
    <string name="gp">GP</string>
    <string name="rwh">RWH</string>
    <string name="sc">SC</string>
    <string name="direction_of_face">Direction of face</string>
    <string name="number_of_floor">Number of Floor</string>
    <string name="fully_furnished">Fully Furnished</string>
    <string name="semi_furnished">Semi Furnished</string>
    <string name="two_wheeler">Two Wheeler</string>
    <string name="price">Price</string>
    <string name="floor_to_stay_on">Floor to Stay On</string>
    <string name="house_keeping">House Keeping</string>
    <string name="pb">PB</string>
    <string name="servant">Servant</string>
    <string name="ag">AG</string>
    <string name="ah">AH</string>
    <string name="number_of_balconies">Number of Balconies</string>
    <string name="deposit">Deposit</string>
</resources>
